--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -54,6 +54,7 @@
   margin: 4rem 0;
   line-height: 1.5;
   font-size: 1.5rem;
+  width: 800px;
 }
 
 .code {
@@ -79,10 +80,13 @@
   text-align: left;
   color: inherit;
   text-decoration: none;
+  color: #DDDDDD;
   border: 1px solid #eaeaea;
   border-radius: 10px;
   transition: color 0.15s ease, border-color 0.15s ease;
   max-width: 300px;
+  background: #121212;
+  min-height: 200px;
 }
 
 .card:hover,
