--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,14 @@
+@import url('https://fonts.cdnfonts.com/css/minecraft-4');
+
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+  font-family: Minecraft, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  background-image: url('../public/background.webp');
+  background-size: 100px;
+  color: #121212;
 }
 
 a {
@@ -20,7 +25,7 @@ a {
     color-scheme: dark;
   }
   body {
-    color: white;
-    background: black;
+    background-image: url('../public/background-dark.webp');
+    color: #DDDDDD;
   }
 }
