fix: styling fixes

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,8 +1,10 @@
 .container {
-  padding: 0 2rem;
+  min-width: 100vw;
+  background-size: 100px;
 }
 
 .main {
+  margin: 0 5vw;
   min-height: 100vh;
   padding: 4rem 0;
   flex: 1;
@@ -10,39 +12,14 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-}
-
-.footer {
-  display: flex;
-  flex: 1;
-  padding: 2rem 0;
-  border-top: 1px solid #eaeaea;
-  justify-content: center;
-  align-items: center;
-}
-
-.footer a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-grow: 1;
-}
-
-.title a {
-  color: #0070f3;
-  text-decoration: none;
-}
-
-.title a:hover,
-.title a:focus,
-.title a:active {
-  text-decoration: underline;
+  background: rgba(0, 0, 0, 0.5);
 }
 
 .title {
   margin: 0;
   line-height: 1.15;
   font-size: 4rem;
+  width: 60vw;
 }
 
 .title,
@@ -54,16 +31,7 @@
   margin: 4rem 0;
   line-height: 1.5;
   font-size: 1.5rem;
-  width: 800px;
-}
-
-.code {
-  background: #fafafa;
-  border-radius: 5px;
-  padding: 0.75rem;
-  font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
+  width: 80vw;
 }
 
 .grid {
@@ -107,15 +75,17 @@
   line-height: 1.5;
 }
 
-.logo {
-  height: 1em;
-  margin-left: 0.5rem;
-}
-
 @media (max-width: 600px) {
   .grid {
     width: 100%;
     flex-direction: column;
+  }
+  .title {
+    width: 95vw;
+    font-size: 3rem;
+  }
+  .main {
+    margin: 0 0;
   }
 }
 
